--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,4 +18,4 @@ jobs:
       run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT\
       
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag flask-app:${{ steps.vars.outputs.sha_short }}
+      run: docker build -t flask-app:${{ steps.vars.outputs.sha_short }} .
