--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,4 +18,18 @@ jobs:
       run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT\
       
     - name: Build the Docker image
-      run: docker build -t flask-app:${{ steps.git_sha.outputs.sha_short }} .
+      run: docker build -t flaskapp:latest .
+
+    - name: Test
+      run: echo "TODO - Test"
+    
+    - name: Push to ECR
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      run: |
+        aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 821594384510.dkr.ecr.us-east-1.amazonaws.com
+        docker tag flaskapp:latest 821594384510.dkr.ecr.us-east-1.amazonaws.com/flaskapp:${{ steps.git_sha.outputs.sha_short }}
+        docker tag flaskapp:latest 821594384510.dkr.ecr.us-east-1.amazonaws.com/flaskapp:latest
+        docker push 821594384510.dkr.ecr.us-east-1.amazonaws.com/flaskapp:${{ steps.git_sha.outputs.sha_short }}
+        docker push 821594384510.dkr.ecr.us-east-1.amazonaws.com/flaskapp:latest
